<resources>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="jodoplay_demo_app_name">霸气江湖</string>
    <string name="jodoplay_demo_menu_settings">Settings</string>
    <string name="jodoplay_service_datetime_pattern">MM-dd HH:mm</string>
    <string name="jodoplay_service_chatting_solvedask_text">Problem solved?</string>
    <string name="jodoplay_service_chatting_ans_negative">No</string>
    <string name="jodoplay_service_chatting_ans_positive">Yes</string>
    <string name="jodoplay_service_chatting_exitconfirm_text">Are you sure you want to exit the customer service system?</string>
    <string name="jodoplay_service_copied_noti">The content has been copied</string>
    <string name="jodoplay_service_input_email_hint">Your email:(Optional)</string>
    <string name="jodoplay_service_input_nickname_hint">Your name:(Required)</string>
    <string name="jodoplay_service_input_problem_desc_hint">Your problem description:(Required)</string>
    <string name="jodoplay_service_contactus">Contact Us</string>
    <string name="jodoplay_service_submit_btn_text">Next</string>
    <string name="jodoplay_service_selection_title">Problem type (Required):</string>
    <string name="jodoplay_service_to_chat_history">View Chat Log</string>
    <string name="jodoplay_service_selection_login">Login Issues</string>
    <string name="jodoplay_service_selection_account">Account Issues</string>
    <string name="jodoplay_service_selection_deposit">Recharge Issues</string>
    <string name="jodoplay_service_selection_game">Game Issues</string>
    <string name="jodoplay_service_selection_other">Other Issues</string>
    <string name="jodoplay_service_bottom_sendbtn">Send</string>
    <string name="jodoplay_service_chat_solved_text">Solved</string>
    <string name="jodoplay_service_title_problem_submit">Customer Service</string>
    <string name="jodoplay_service_title_chatting">Customer Service</string>
    <string name="jodoplay_service_create_conversation_tips">connecting to KKFUN customer service……</string>
    <string name="jodoplay_service_done_problem_to_new_problem_tips">This issue has been resolved, click here New Issue</string>
    <string name="jodoplay_service_failed">Failed</string>
    <string name="jodoplay_service_send_content_null">Send can not be empty</string>
    <string name="jodoplay_service_pick_a_image_text">Select Image</string>
    <string name="jodoplay_service_repick_a_image_text">Please choose another image</string>
    <string name="jodoplay_service_shortcut_text">Games Service</string>
    <string name="jodoplay_service_title_faq">FAQ</string>
    <string name="jodoplay_service_init_retry_toast">PCCSManager Initialization Retry:</string>
    <string name="jodoplay_service_receive_message_invalid">Message Error:</string>
    <string name="jodoplay_service_nolify_title">NEW</string>
    <string name="jodoplay_service_nolify_content">Support has answered your question, click on View</string>
    <string name="jodoplay_send_pic_title">Send Picture</string>
    <string name="jodoplay_service_no_resovled_tips">What else can I do for you？</string>
    <string name="jodoplay_service_solvedask_ans_positive">Solved</string>
    <string name="jodoplay_service_solvedask_ans_negative">Unsolved</string>
    <string name="jodoplay_service_tips_illegal_email">Illegal email address</string>
    <string name="jodoplay_service_entrytosubmit_text">"If you have any other problems, 
please click"</string>
    <string name="jodoplay_service_initing_tips">initing custom service,please wait a moment</string>
    <string name="jodoplay_service_init_fail">init custom service fail</string>
    <string name="jodoplay_service_ask_to_detailize_problem_prefix">Dear player, please describe the【</string>
    <string name="jodoplay_service_ask_to_detailize_problem_rarefix">"】 problem you have met, so that I can help you with it.
~@^_^@~"</string>
    <string name="jodoplay_service_tips_the_problem_solved_cant_send_msg">The consultation has ended. If you have other questions, press the return button to restart a consultation.</string>
    <string name="jodoplay_service_tips_cant_send_yet">Please wait while connecting</string>
    <string name="jodoplay_service_connect_success">Successfully connected</string>
    <string name="jodoplay_service_init_start">begin init custom service</string>
    <string name="jodoplay_service_retry_connect">connect retry:</string>
    <string name="jodoplay_service_livechat_closed_tips">The Customer Service System is being updated. If you have any question, please contact us at </string>
    <string name="jodoplay_service_helpcenter_closed_tips">The Help Center is being updated. If you have any question, please contact us at </string>
    <string name="jodoplay_sharesdklocal_action_settings">Settings</string>
    <string name="jodoplay_sharesdklocal_app_label">Download Manager</string>
    <string name="jodoplay_sharesdklocal_permlab_downloadManager">Access download manager.</string>
    <string name="jodoplay_sharesdklocal_permdesc_downloadManager">Allows the application to access the download manager and to use it to download files. Malicious applications can use this to disrupt downloads and access private information.</string>
    <string name="jodoplay_sharesdklocal_permlab_downloadManagerAdvanced">Advanced download manager functions.</string>
    <string name="jodoplay_other_login">Login With:</string>
    <string name="jodoplay_icon_desc_facebook">Facebook</string>
    <string name="jodoplay_buoy_usercenter">Account</string>
    <string name="jodoplay_buoy_webpay">Buy</string>
    <string name="jodoplay_buoy_fb_fans">FB Page</string>
    <string name="jodoplay_buoy_sys_notice">Notice</string>
    <string name="jodoplay_buoy_jpoint">Free Coins</string>
    <string name="jodoplay_buoy_bbs">BBS</string>
    <string name="jodoplay_buoy_giftcardcenter">GiftCard</string>
    <string name="jodoplay_buoy_helpcenter">Help</string>
    <string name="jodoplay_buoy_livechat">GM</string>
    <string name="jodoplay_welcome_back">Welcome~</string>
    <string name="jodoplay_account_center">User Center</string>
    <string name="jodoplay_quick_trial">Quick Start</string>
    <string name="jodoplay_empty_text" />
</resources>