<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/jodoplay_service_chatting_background" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/jodoplay_service_title" android:background="@color/jodoplay_service_bgcolor" android:paddingLeft="@dimen/jodoplay_service_title_padding_hori" android:paddingRight="@dimen/jodoplay_service_title_padding_hori" android:layout_width="fill_parent" android:layout_height="@dimen/jodoplay_service_title_height">
        <ImageButton android:id="@id/jodoplay_service_top_backbtn" android:background="@drawable/jodoplay_service_back_btn" android:layout_width="@dimen/jodoplay_service_title_back_btn_size" android:layout_height="@dimen/jodoplay_service_title_back_btn_size" android:scaleType="fitCenter" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/jodoplay_service_title_textsize" android:textColor="@color/jodoplay_service_ui_fontcolor" android:id="@id/jodoplay_service_title_chatting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/jodoplay_service_title_problem_submit" android:layout_centerInParent="true" />
    </RelativeLayout>
    <View android:background="@color/jodoplay_service_divider_color" android:layout_width="fill_parent" android:layout_height="@dimen/jodoplay_service_divider_height" />
    <com.jodo.pccs3.view.LinearLayoutWithOnLayoutChangedListener android:orientation="vertical" android:id="@id/jodoplay_service_problemsubmit_middle_part" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <RelativeLayout android:orientation="vertical" android:paddingTop="@dimen/jodoplay_service_problem_submit_padding_middle_vert" android:paddingBottom="@dimen/jodoplay_service_problem_submit_padding_middle_vert" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/jodoplay_service_problemsubmit_content_title" android:textColor="@color/jodoplay_service_chatting_fontcolor" android:id="@id/jodoplay_service_selection_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/jodoplay_service_selection_margin_hori" android:layout_marginTop="@dimen/jodoplay_service_problem_submit_padding_middle_vert" android:text="@string/jodoplay_service_selection_title" android:layout_marginStart="@dimen/jodoplay_service_selection_margin_hori" />
                <RadioGroup android:orientation="vertical" android:id="@id/jodoplay_service_problem_submit_selection" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/jodoplay_service_selection_title">
                    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <RadioButton android:id="@id/jodoplay_service_selection_login" android:text="@string/jodoplay_service_selection_login" style="@style/jd_service_selection_btn_style" />
                        <RadioButton android:id="@id/jodoplay_service_selection_account" android:text="@string/jodoplay_service_selection_account" style="@style/jd_service_selection_btn_style" />
                        <RadioButton android:id="@id/jodoplay_service_selection_deposit" android:text="@string/jodoplay_service_selection_deposit" style="@style/jd_service_selection_btn_style" />
                    </LinearLayout>
                    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <RadioButton android:id="@id/jodoplay_service_selection_game" android:text="@string/jodoplay_service_selection_game" style="@style/jd_service_selection_btn_style" />
                        <RadioButton android:id="@id/jodoplay_service_selection_other" android:text="@string/jodoplay_service_selection_other" style="@style/jd_service_selection_btn_style" />
                        <RadioButton android:visibility="invisible" style="@style/jd_service_selection_btn_style" />
                    </LinearLayout>
                </RadioGroup>
                <LinearLayout android:orientation="vertical" android:id="@id/jodoplay_input_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/jodoplay_service_problem_submit_selection">
                    <EditText android:textSize="@dimen/jodoplay_service_problemsubmit_content_title" android:textColor="@color/jodoplay_service_chatting_fontcolor" android:id="@id/jodoplay_service_input_nickname" android:background="@color/jodoplay_service_input_email_bg" android:padding="@dimen/jodoplay_service_input_email_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/jodoplay_service_problem_submit_margin_mail_vert" android:layout_marginTop="@dimen/jodoplay_service_problem_submit_margin_mail_hori" android:layout_marginRight="@dimen/jodoplay_service_problem_submit_margin_mail_vert" android:layout_marginBottom="@dimen/jodoplay_service_problem_submit_margin_mail_hori" android:hint="@string/jodoplay_service_input_nickname_hint" android:singleLine="true" android:inputType="text" />
                    <AutoCompleteTextView android:textSize="@dimen/jodoplay_service_problemsubmit_content_title" android:textColor="@color/jodoplay_service_chatting_fontcolor" android:id="@id/jodoplay_service_input_email" android:background="@color/jodoplay_service_input_email_bg" android:padding="@dimen/jodoplay_service_input_email_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/jodoplay_service_problem_submit_margin_mail_vert" android:layout_marginRight="@dimen/jodoplay_service_problem_submit_margin_mail_vert" android:layout_marginBottom="@dimen/jodoplay_service_problem_submit_margin_mail_hori" android:hint="@string/jodoplay_service_input_email_hint" android:singleLine="true" android:inputType="textEmailAddress" />
                    <EditText android:textSize="@dimen/jodoplay_service_problemsubmit_content_title" android:textColor="@color/jodoplay_service_chatting_fontcolor" android:gravity="center|left|top" android:id="@id/jodoplay_service_input_problem_desc" android:background="@color/jodoplay_service_input_email_bg" android:padding="@dimen/jodoplay_service_input_email_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/jodoplay_service_problem_submit_margin_mail_vert" android:layout_marginRight="@dimen/jodoplay_service_problem_submit_margin_mail_vert" android:layout_marginBottom="@dimen/jodoplay_service_problem_submit_margin_mail_hori" android:hint="@string/jodoplay_service_input_problem_desc_hint" android:lines="5" android:singleLine="false" android:inputType="textMultiLine" />
                </LinearLayout>
                <Button android:textSize="@dimen/jodoplay_service_submit_btn_textsize" android:textColor="@color/jodoplay_service_white" android:gravity="center" android:id="@id/jodoplay_service_submit_btn" android:background="@drawable/jodoplay_service_problem_submit_btn_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/jodoplay_service_submit_btn_margin_top" android:text="@string/jodoplay_service_submit_btn_text" android:layout_below="@id/jodoplay_input_container" android:layout_centerHorizontal="true" />
                <TextView android:textColor="@color/jodoplay_service_chatting_fontcolor" android:id="@id/jodoplay_service_to_chat_history" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/jodoplay_service_to_history_text_margin_top" android:layout_marginRight="@dimen/jodoplay_service_problem_submit_margin_mail_hori" android:text="@string/jodoplay_service_to_chat_history" android:layout_below="@id/jodoplay_service_submit_btn" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
            </RelativeLayout>
        </ScrollView>
        <View android:background="@color/jodoplay_service_divider_color" android:layout_width="fill_parent" android:layout_height="@dimen/jodoplay_service_divider_height" />
        <LinearLayout android:orientation="vertical" android:id="@id/jodoplay_service_problemsubmit_bottom_part" android:layout_width="fill_parent" android:layout_height="@dimen/jodoplay_service_problem_submit_bottom_height">
            <TextView android:textColor="@color/jodoplay_service_chatting_fontcolor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/jodoplay_service_problem_summit_bottom_padding" android:layout_marginTop="@dimen/jodoplay_service_problem_summit_bottom_padding" android:text="@string/jodoplay_service_contactus" android:layout_marginStart="@dimen/jodoplay_service_problem_summit_bottom_padding" />
            <TextView android:textColor="@color/jodoplay_service_chatting_fontcolor" android:id="@id/jodoplay_service_problem_submit_contact_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/jodoplay_service_problem_summit_bottom_padding" android:text="@string/jodoplay_service_contactus" />
        </LinearLayout>
    </com.jodo.pccs3.view.LinearLayoutWithOnLayoutChangedListener>
</LinearLayout>