<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="fill_parent" style="@style/jd_block"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:id="@id/jodoplay_wmtoast_content" android:layout_height="fill_parent" style="@style/jd_toast_content_parent">
        <RelativeLayout android:background="@drawable/jodoplay_autologin_bg" style="@style/jd_toast_content">
            <LinearLayout style="@style/jd_toast_content_child">
                <ImageView android:id="@id/jodoplay_game_icon" android:background="@drawable/jodoplay_autologin_logo_bg" android:src="@drawable/jodoplay_banner_logo" style="@style/jd_toast_game_icon" />
                <LinearLayout android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" style="@style/jd_toast_title_ly">
                    <TextView android:id="@id/jodoplay_wmtoast_title" android:text="@string/jodoplay_empty_text" style="@style/jd_toast_title" />
                </LinearLayout>
                <TextView android:id="@id/jodoplay_wmtoast_text" android:visibility="gone" android:text="@string/jodoplay_welcome_back" style="@style/jd_toast_text" />
                <Button android:id="@id/jodoplay_account_btn" android:background="@drawable/jodoplay_account_btn" android:text="@string/jodoplay_account_center" style="@style/jd_toast_account_btn" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>