<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/jodoplay_login_bottom_textsize" android:textColor="@color/jodoplay_f.w" android:layout_gravity="center_vertical" android:id="@id/jodoplay_other_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/jodoplay_other_login" android:singleLine="true" android:maxLength="100" android:layout_alignParentLeft="true" android:layout_centerInParent="true" android:layout_marginEnd="10.0dip" />
    <ImageView android:id="@id/jodoplay_icon_fb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/jodoplay_icon_fb" android:scaleType="fitXY" android:adjustViewBounds="true" android:layout_toRightOf="@id/jodoplay_other_text" android:layout_centerVertical="true" android:contentDescription="@string/jodoplay_icon_desc_facebook" />
    <TextView android:textSize="@dimen/jodoplay_login_trynow_textsize" android:id="@id/jodoplay_login_trynow" android:background="@drawable/jodoplay_textview_style" android:padding="@dimen/jodoplay_login_trynow_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/jodoplay_login_bottom_inner_margin_hori" android:text="@string/jodoplay_quick_trial" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/jodoplay_login_bottom_inner_margin_hori" />
</RelativeLayout>